# ogg-opus-stream-decoder

./: 16k16bit.opus  CMakeLists.txt  LICENSE  README.md  en_16k16bit.opus
libogg-1.3.5/: Makefile  config.status  libtool
libogg-1.3.5/doc/: Makefile
libogg-1.3.5/doc/libogg/: Makefile
libogg-1.3.5/include/: Makefile
libogg-1.3.5/include/ogg/: Makefile
libogg-1.3.5/src/: Makefile
libogg-1.3.5/src/.deps/: bitwise.Plo  framing.Plo  test_bitwise-bitwise.Po  test_framing-framing.Po
opus-1.3.1/: Makefile  config.status  libtool
opus-1.3.1/celt/.deps/: bands.Plo  celt.Plo  celt_decoder.Plo  celt_encoder.Plo  celt_lpc.Plo  cwrs.Plo  entcode.Plo  entdec.Plo  entenc.Plo  kiss_fft.Plo  laplace.Plo  mathops.Plo  mdct.Plo  modes.Plo  pitch.Plo  quant_bands.Plo  rate.Plo  vq.Plo
opus-1.3.1/doc/: Makefile
opus-1.3.1/silk/.deps/: A2NLSF.Plo  CNG.Plo  HP_variable_cutoff.Plo  LPC_analysis_filter.Plo  LPC_fit.Plo  LPC_inv_pred_gain.Plo  LP_variable_cutoff.Plo  NLSF2A.Plo  NLSF_VQ.Plo  NLSF_VQ_weights_laroia.Plo  NLSF_decode.Plo  NLSF_del_dec_quant.Plo  NLSF_encode.Plo  NLSF_stabilize.Plo  NLSF_unpack.Plo  NSQ.Plo  NSQ_del_dec.Plo  PLC.Plo  VAD.Plo  VQ_WMat_EC.Plo  ana_filt_bank_1.Plo  biquad_alt.Plo  bwexpander.Plo  bwexpander_32.Plo  check_control_input.Plo  code_signs.Plo  control_SNR.Plo  control_audio_bandwidth.Plo  control_codec.Plo  debug.Plo  dec_API.Plo  decode_core.Plo  decode_frame.Plo  decode_indices.Plo  decode_parameters.Plo  decode_pitch.Plo  decode_pulses.Plo  (+40 more)
opus-1.3.1/src/: opus_decoder.c
src/: main.cc  stream_opus_decoder.cc  stream_opus_decoder.h
(+71 files in other folders)
